--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -888,10 +888,10 @@
 
 								<button id="check-button" type="button" class="checkYourResult" style="border: solid black 3px; border-radius: 5px; padding: 5px;" disabled="true" onclick="checkYourResult()" >Check Your Result</button>
 
-								<div  style="margin:auto; display: flex; gap: 40px ;">
+								<!-- <div  style="margin:auto; display: flex; gap: 40px ;"> -->
 									<button style=" margin-bottom: 40px; border: solid black 3px; border-radius: 5px; padding: 5px; " onclick="window.print()">Print this page</button>
 									
-								</div>
+								<!-- </div> -->
 
 
 							</div>
