--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -811,7 +811,7 @@
 
 								</div>
 
-								<table id="tab1" border="1">
+								<table id="tab1" class="observationTable" border="1">
 									<tr>
 										<th colspan="8" style="font-size: 25px; font-weight: bolder; background-color: #634380;color: white;">Observation Table</th>
 									</tr>
@@ -919,10 +919,11 @@
 
 								<button id="check-button" type="button" class="checkYourResult" style="border: solid black 3px; border-radius: 5px; padding: 5px;" disabled="true" onclick="checkYourResult()" >Check Your Result</button>
 
-								<!-- <div  style="margin:auto; display: flex; gap: 40px ;"> -->
+								<div  style="margin:auto; display: flex; gap: 40px ;">
+									<button style=" margin-bottom: 40px; border: solid black 3px; border-radius: 5px; padding: 5px; " onclick="exportToExcel()">Export to Excel</button>
 									<button style=" margin-bottom: 40px; border: solid black 3px; border-radius: 5px; padding: 5px; " onclick="window.print()">Print this page</button>
 									
-								<!-- </div> -->
+								</div>
 
 
 							</div>
@@ -933,6 +934,7 @@
 
 				<!-- Add JS at the bottom of HTML file -->
 				<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js"></script>
 				<script src="./js/calculation.js"></script>
 				<script src="./js/main.js"></script>
 			</body>
